# printline

./: .gitignore  LICENSE  README.md  builder.py  processor.py  pyproject.toml  test_buider.py
notebooks/: fft.ipynb  print_blank.ipynb  strip_accords.ipynb
printline/: builder.py  processor.py  strip.py
test/: test_buider.py  test_chain.py
